--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
-title: Hello
-owner: Max Muster
-email:
-description: A simple and minimalistic jekyll blogging theme
+title: Justin Yu
+owner: Justin Yu
+email: justinyu@mit.edu
+description: My portfolio website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 language: en
 twitter_username:
 github_username:
 disqus_username: 
+
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 
 permalink: /:year/:month/:day/:title/
 
