changed css path

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ owner: Justin Yu
 email: justinyu@mit.edu
 description: My portfolio website
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://justinyu1618.github.io/personal_website2/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 language: en
 twitter_username:
 github_username:
